manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minimal-ingress
  namespace: kolybelkin
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - path: /hello
            pathType: Prefix
            backend:
              service:
                name: kolybelkin-app-service
                port:
                  name: web
